--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,26 @@
 @charset "UTF-8";
 /* CSS Document */
 
+.social-media{
+	border-radius:45px;
+	margin:5px;
+}
+
+.headshot{
+	border-radius:250px;
+}
+
+.vertical-line{
+	border-left:2px solid #000000;
+}
+
+.portimg {
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+}
+
+.portimg:hover{
+  -webkit-filter:grayscale(0);
+  filter: grayscale(0);
+  
+}
