--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -25,13 +25,13 @@ p {
 }
 
 #contact-area {
-	width: 600px;
+	width: 100%;
 	margin-top: 25px;
 }
 
 #contact-area input, #contact-area textarea {
 	padding: 5px;
-	width: 471px;
+	width: 100%;
 	font-family: Helvetica, sans-serif;
 	font-size: 1.4em;
 	margin: 0px 0px 10px 0px;
@@ -44,11 +44,6 @@ p {
 
 #contact-area textarea:focus, #contact-area input:focus {
 	border: 2px solid #900;
-}
-
-#contact-area input.submit-button {
-	width: 100px;
-	float: right;
 }
 
 label {
