--- a/css/main.css
+++ b/css/main.css
@@ -2,30 +2,26 @@
 /* CSS Document */
 
 
+/*image settings*/
+
 .social-media{
 	border-radius:45px;
 	margin:5px;
 }
-
 .headshot{
 	border-radius:250px;
 }
-
-.vertical-line{
-	border-left:2px solid #000000;
-}
-
 .portimg {
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
 }
-
 .portimg:hover{
   -webkit-filter:grayscale(0);
-  filter: grayscale(0);
-  
+  filter: grayscale(0);  
 }
 
+
+/*typographic settings*/
 
 .panel p{
 	position:relative;
@@ -33,7 +29,6 @@
 	left:30px;
 	visibility:hidden;
 }
-
 .panel:hover p{
 	visibility:visible;
 }
