--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,43 @@
 /* CSS Document */
 
 
+/*css directory*/
+
+/*buttons: line 18*/
+/* images: line 42*/
+/*typography: line 69*/
+/*footer: line 90*/
+/*header: line 171*/
+
+
+body {
+	background: url(../imgs/background_seamless.png) repeat;
+}
+
+/*buttons*/
+
+.button-group > li .button{
+	border-left:0px;
+	font-size: 2rem;
+	padding:.5rem;
+	margin-bottom:.25rem;
+}
+
+.button{
+	background-color: rgba(43, 166, 203, 0);
+}
+
+.button:hover{
+	background-color: rgba(43, 166, 203, 0);
+}
+
+.hey-wobbie-logo{
+	margin:.5rem;
+}
+
+
+
+
 /*image settings*/
 
 .social-media{
@@ -9,15 +46,23 @@
 	margin:5px;
 }
 .headshot{
-	border-radius:250px;
+	border-radius:50%;
 }
 .portimg {
-  -webkit-filter: grayscale(1);
-  filter: grayscale(1);
+  -webkit-filter: grayscale(100%);
+  -webkit-transition: .5s ease-in-out;
+  -moz-filter: grayscale(100%); 
+  -moz-transition: .5s ease-in-out;
+  -o-filter: grayscale(100%); 
+  -o-transition: .5s ease-in-out;
 }
 .portimg:hover{
-  -webkit-filter:grayscale(0);
-  filter: grayscale(0);  
+  -webkit-filter: grayscale(0%);
+  -webkit-transition: .5s ease-in-out;
+  -moz-filter: grayscale(0%);
+  -moz-transition: .5s ease-in-out;
+  -o-filter: grayscale(0%);
+  -o-transition: .5s ease-in-out;  
 }
 
 
@@ -25,10 +70,354 @@
 
 .panel p{
 	position:relative;
-	top:-30px;
+	top:-90px;
 	left:30px;
 	visibility:hidden;
 }
 .panel:hover p{
 	visibility:visible;
+}
+
+blockquote{
+	border-left:0px;
+}
+
+h1{
+	padding:5rem 0 0 0;
+}
+
+.white{
+	color:#FFFFFF;
+}
+
+/*footer*/
+
+.footer-social-media, .header-highlite-link{
+	fill:#1e1e57;
+}
+.footer-social-media:hover, .header-highlite-link:hover{
+	fill:#da1e35;
+}
+
+
+
+
+.footer-distributed{
+	background-color: #e2e2e2;
+	width: 100%;
+	text-align: left;
+	padding: 1.5rem;
+	margin-top: 2rem;
+}
+
+.footer-distributed .footer-left p{
+	font-size: 1rem;
+	margin: 0;
+}
+
+.footer-left a{
+	color:#262626;
+	margin-right:1rem;
+}
+
+.footer-left a:hover{
+	color: #15767c;
+}
+
+/* Footer links */
+
+.footer-distributed p.footer-links{
+	font-size:1rem;
+	font-weight: bold;
+	margin: .5rem 0 0 0;
+	padding: 0;
+}
+
+.footer-distributed p.footer-links a{
+	display:inline-block;
+	text-decoration: none;
+}
+
+.footer-distributed .footer-right{
+	float: right;
+	margin-top: 6px;
+}
+
+.footer-distributed .footer-right a{
+	display: inline-block;
+	width: 35px;
+	height: 35px;
+	font-size: 20px;
+	color: #262626;
+	text-align: center;
+	line-height: 35px;
+
+	margin-left: 3px;
+}
+
+@media (max-width: 600px) {
+
+	.footer-distributed .footer-left,
+	.footer-distributed .footer-right{
+		text-align: center;
+	}
+
+	.footer-distributed .footer-right{
+		float: none;
+		margin: 0 auto;
+	}
+
+	.footer-distributed .footer-left p.footer-links{
+		line-height: 1.8;
+	}
+}
+
+
+
+
+/* header*/
+
+
+@-webkit-viewport { width: device-width; }
+@-moz-viewport { width: device-width; }
+@-ms-viewport { width: device-width; }
+@-o-viewport { width: device-width; }
+@viewport { width: device-width; }
+
+
+/* ------------------------------------------
+  RESPONSIVE NAV STYLES
+--------------------------------------------- */
+
+.nav-collapse ul {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: block;
+  list-style: none;
+}
+
+.nav-collapse li {
+  width: 100%;
+  display: block;
+}
+
+.js .nav-collapse {
+  clip: rect(0 0 0 0);
+  position: absolute;
+  display: block;
+  overflow: hidden;
+  zoom: 1;
+}
+
+.nav-toggle {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+@media screen and (min-width: 40em) {
+  .js .nav-collapse {
+    position: relative;
+  }
+  .js .nav-collapse.closed {
+    max-height: none;
+  }
+  .nav-toggle {
+    display: none;
+  }
+}
+
+
+/* ------------------------------------------
+  FIXED HEADER
+--------------------------------------------- */
+
+header {
+  background:#e2e2e2;
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+
+/* ------------------------------------------
+  MASK
+--------------------------------------------- */
+
+.mask {
+  -webkit-transition: opacity 300ms;
+  -moz-transition: opacity 300ms;
+  transition: opacity 300ms;
+  background: rgba(0,0,0, .5);
+  visibility: hidden;
+  position: fixed;
+  opacity: 0;
+  z-index: 2;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+}
+
+.android .mask {
+  -webkit-transition: none;
+  transition: none;
+}
+
+.js-nav-active .mask {
+  visibility: visible;
+  opacity: 1;
+}
+
+@media screen and (min-width: 40em) {
+  .mask {
+    display: none !important;
+    opacity: 0 !important;
+  }
+}
+
+
+/* ------------------------------------------
+  NAVIGATION STYLES
+--------------------------------------------- */
+
+.fixed {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.nav-collapse,
+.nav-collapse * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.nav-collapse,
+.nav-collapse ul {
+  list-style: none;
+  width: 100%;
+  float: left;
+}
+
+
+ul li a{
+	font-size:1.5rem;
+	font-weight:bold;
+	text-transform:uppercase;
+}
+
+@media screen and (min-width: 40em) {
+  .nav-collapse {
+    float: right;
+    width: auto;
+  }
+}
+
+.nav-collapse li {
+  float: right;
+  width: 100%;
+}
+
+@media screen and (min-width: 40em) {
+  .nav-collapse li {
+    width: auto;
+  }
+}
+
+.nav-collapse a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  border-top: 1px solid white;
+  text-decoration: none;
+  background: #e2e2e2;
+  padding: 0.7em 1em;
+  color: #272626;
+  width: 100%;
+}
+
+.nav-collapse a:hover{
+	color:#15767c;
+}
+
+#nav-hilite{
+	color:#da1e35;
+}
+
+#nav-hilite:hover{
+	color:#1e1e57;
+}
+	
+
+@media screen and (min-width: 40em) {
+  .nav-collapse a {
+    text-align: center;
+    border-top: 0;
+    float: left;
+    margin: 0;
+  }
+}
+
+.nav-collapse ul ul a {
+  background: #e2e2e2;
+  padding-left: 2em;
+}
+
+@media screen and (min-width: 40em) {
+  .nav-collapse ul ul a {
+    display: none;
+  }
+}
+
+
+/* ------------------------------------------
+  NAV TOGGLE STYLES
+--------------------------------------------- */
+
+@font-face {
+  src:url("../imgs/responsivenav.eot");
+  src:url("../imgs/responsivenav.eot") format("embedded-opentype"),
+    url("../imgs/responsivenav.ttf") format("truetype"),
+    url("../imgs/responsivenav.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+.nav-toggle {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-decoration: none;
+  text-indent: -300px;
+  position: relative;
+  overflow: hidden;
+  width: 60px;
+  height: 55px;
+  float: right;
+}
+
+.nav-toggle:before {
+  color: #000; /* Edit this to change the icon color */
+  font: 1rem;
+  text-transform: none;
+  text-align: center;
+  position: absolute;
+  content: "\2261"; /* Hamburger icon */
+  text-indent: 0;
+  speak: none;
+  width: 100%;
+  left: 0;
+  top: 0;
+}
+
+.nav-toggle.active:before {
+  font-size: 1rem;
+  content: "\78"; /* Close icon */
 }
