--- a/css/styles.css
+++ b/css/styles.css
@@ -1,198 +1,3 @@
-@charset "UTF-8";
-/* CSS Document */
-
-
-/*css directory*/
-
-/*buttons: line 18*/
-/* images: line 42*/
-/*typography: line 69*/
-/*footer: line 90*/
-/*header: line 171*/
-
-
-body {
-	background: url(../imgs/background_seamless.png) repeat;
-}
-
-
-
-/*button | link styles*/
-
-.button-group > li .button{
-	border-left:0px;
-	font-size: 2rem;
-	padding:.5rem;
-	margin-bottom:.25rem;
-}
-
-.button{
-	background-color: rgba(43, 166, 203, 0);
-}
-
-.button:hover{
-	background-color: rgba(43, 166, 203, 0);
-}
-
-.hey-wobbie-logo{
-	margin:.5rem;
-}
-
-
-
-
-/*image settings*/
-
-.social-media{
-	border-radius:45px;
-	margin:5px;
-}
-.headshot{
-	border-radius:50%;
-}
-.portimg {
-  -webkit-filter: grayscale(100%) blur(3px);
-  -webkit-transition: .25s ease-in-out;
-  -moz-filter: grayscale(100%) blur(3px); 
-  -moz-transition: .25s ease-in-out;
-  -o-filter: grayscale(100%) blur(3px); 
-  -o-transition: .25s ease-in-out;
-}
-.portimg:hover{
-  -webkit-filter: grayscale(0%) blur(0px);
-  -webkit-transition: .25s ease-in-out;
-  -moz-filter: grayscale(0%) blur(0px);
-  -moz-transition: .25s ease-in-out;
-  -o-filter: grayscale(0%) blur(0px);
-  -o-transition: .25s ease-in-out;
-}
-
-
-/*typographic settings*/
-
-.panel{
-	margin-bottom:2rem;
-}
-
-.panel span{
-	position:absolute;
-	top:2rem;
-	left:3rem;
-	visibility:hidden;
-	color:#da1e35;
-	
-}
-.panel:hover p{
-	visibility:visible;
-}
-
-blockquote{
-	border-left:0px;
-}
-
-h1{
-	padding:5rem 0 0 0;
-}
-
-h1, h2, h3{
-	text-transform:uppercase;
-}
-
-.white{
-	color:#FFFFFF;
-}
-
-/*footer*/
-
-
-.footer-social-media, .header-highlite-link{
-	fill:#1e1e57;
-}
-.footer-social-media:hover, .header-highlite-link:hover{
-	fill:#da1e35;
-}
-
-
-
-
-.footer-distributed{
-	background-color: #e2e2e2;
-	width: 100%;
-	text-align: left;
-	padding: 1.5rem;
-	margin-top: 6rem;
-}
-
-.footer-distributed .footer-left p{
-	font-size: 1rem;
-	margin: 0;
-}
-
-.footer-left a{
-	color:#262626;
-	margin-right:1rem;
-}
-
-.footer-left a:hover{
-	color: #15767c;
-}
-
-/* Footer links */
-
-.footer-distributed p.footer-links{
-	font-size:1rem;
-	font-weight: bold;
-	margin: .5rem 0 0 0;
-	padding: 0;
-}
-
-.footer-distributed p.footer-links a{
-	display:inline-block;
-	text-decoration: none;
-}
-
-.footer-distributed .footer-right{
-	float: right;
-	margin-top: 6px;
-}
-
-.footer-distributed .footer-right a{
-	display: inline-block;
-	width: 35px;
-	height: 35px;
-	font-size: 20px;
-	color: #262626;
-	text-align: center;
-	line-height: 35px;
-
-	margin-left: 3px;
-}
-
-@media (max-width: 600px) {
-
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-right{
-		text-align: center;
-	}
-
-	.footer-distributed .footer-right{
-		float: none;
-		margin: 0 auto;
-	}
-
-	.footer-distributed .footer-left p.footer-links{
-		line-height: 1.8;
-	}
-}
-
-
-
-
-
-/*  ----------------------------------------
-    HEADER STYLES
------------------------------------------  */
-
 @-webkit-viewport { width: device-width; }
 @-moz-viewport { width: device-width; }
 @-ms-viewport { width: device-width; }
@@ -250,11 +55,21 @@ h1, h2, h3{
 
 
 /* ------------------------------------------
+  DEMO STYLES
+--------------------------------------------- */
+
+body {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+
+/* ------------------------------------------
   FIXED HEADER
 --------------------------------------------- */
 
 header {
-  background: #e2e2e2;
+  background: rgba(0,0,0,0);
   position: fixed;
   z-index: 3;
   width: 100%;
@@ -264,7 +79,7 @@ header {
 
 @media screen and (max-width: 40em) {
 	header{
-		background:#e2e2e2;
+		background:rgba(255,255,255,.85);
 	}
 }
 
@@ -355,34 +170,25 @@ header {
   text-decoration: none;
   background: rgba(226,226,226,.95);
   padding: 0.7em 1em;
-  color: #262626;
-  text-transform:uppercase;
-  font-weight:bold;
-  font-size: 1.5rem;
+  color: #fff;
   width: 100%;
-  text-align:center;
   float: left;
 }
-
-.nav-collapse a:active{
-	color:#15767c;
 }
+
+.nav-collapse a:active,
+.nav-collapse .active a {
+  color: #b73214;
 }
 
 @media screen and (min-width: 40em) {
   .nav-collapse a {
-    padding: 1rem 2rem;
+	background: rgba(226,226,226,.5);
+    padding: 1.02em 2em;
+    text-align: center;
     border-top: 0;
     float: left;
-    margin: 0 auto;
-	text-transform:uppercase;
-	font-weight:bold;
-	font-size: 1.5rem;
-	color:#262626;
-  }
-  
-  .nav-collapse a:hover{
-	 color:#15767c;
+    margin: 0;
   }
 }
 
